--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -22,19 +22,33 @@ html {
 h1 {
   font-family: 'Open Sans';
   font-weight: 700;
-  font-size: 65px;
+  font-size: 4rem;
   font-style: normal;
   line-height: 71px;
 }
 h2 {
   font-family: 'Raleway';
   font-weight: 400;
-  font-size: 22px;
+  font-size: 1.375rem;
   font-style: normal;
   line-height: 33px;
 }
-a{
+a {
   text-decoration: none;
   cursor: pointer;
+}
+.button {
+  display: block;
+  background-color: #e84545;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 21px;
+  font-family: 'Raleway';
+  font-weight: 600;
+  font-size: 0.8125rem;
+  color: #ffffff;
+  border-radius: 2px;
 }
 @import 'masthead.scss';
