--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -11,6 +11,9 @@ html {
   font-family: 'Open Sans', sans-serif;
   font-family: 'Raleway', sans-serif;
 }
+main{
+  width: 100%;
+}
 .container {
   max-width: 1170px;
   margin: 0 auto;
@@ -33,6 +36,19 @@ h2 {
   font-style: normal;
   line-height: 33px;
 }
+h3{
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 0.875rem;
+  font-style: normal;
+}
+p{
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.8745rem;
+  line-height: 21px;
+}
 a {
   text-decoration: none;
   cursor: pointer;
@@ -52,3 +68,7 @@ a {
   border-radius: 2px;
 }
 @import 'masthead.scss';
+@import 'features.scss';
+@import 'works.scss';
+
+
