--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -11,7 +11,7 @@ html {
   font-family: 'Open Sans', sans-serif;
   font-family: 'Raleway', sans-serif;
 }
-main{
+main {
   width: 100%;
 }
 .container {
@@ -36,14 +36,21 @@ h2 {
   font-style: normal;
   line-height: 33px;
 }
-h3{
+h3 {
   font-family: 'Raleway';
   font-weight: 700;
   font-size: 0.875rem;
   font-style: normal;
   line-height: normal;
 }
-p{
+h4 {
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 0.8125rem;
+  font-style: normal;
+  line-height: normal;
+}
+p {
   font-family: 'Raleway';
   font-weight: 400;
   font-style: normal;
@@ -68,10 +75,18 @@ a {
   color: #ffffff;
   border-radius: 2px;
 }
+.social-icons {
+  display: flex;
+}
+
+.social-icon {
+  width: 8px;
+  height: 18px;
+  
+}
+
 @import 'masthead.scss';
 @import 'features.scss';
 @import 'works.scss';
 @import 'team.scss';
-
-
-
+@import 'cliets.scss'
