--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,14 @@ h3 {
   line-height: normal;
 }
 
+h4 {
+  font-family: "Raleway";
+  font-weight: 400;
+  font-size: 0.8125rem;
+  font-style: normal;
+  line-height: normal;
+}
+
 p {
   font-family: "Raleway";
   font-weight: 400;
@@ -78,6 +86,15 @@ a {
   font-size: 0.8125rem;
   color: #ffffff;
   border-radius: 2px;
+}
+
+.social-icons {
+  display: flex;
+}
+
+.social-icon {
+  width: 8px;
+  height: 18px;
 }
 
 .masthead {
@@ -253,4 +270,62 @@ a {
 
 .project-sliders {
   display: none;
+}
+
+.staff__table {
+  display: flex;
+  margin: 0 -15px;
+  padding-top: 100px;
+  justify-content: space-between;
+}
+
+.staff__card {
+  margin: 0 15px;
+}
+
+.staff__picture {
+  width: 270px;
+  height: 270px;
+}
+
+.staff__picture-image {
+  display: block;
+  margin: 0 auto;
+}
+
+.staff__information {
+  text-align: left;
+}
+
+.staff__name {
+  color: #2d3033;
+  padding: 30px 0 16px;
+}
+
+.staff__position {
+  text-transform: uppercase;
+  color: #e84545;
+  padding-bottom: 29px;
+}
+
+.staff__about {
+  color: #6c7279;
+}
+
+.staff__social-icons {
+  margin-top: 31px;
+}
+
+.staff__social-icons-item {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #e8ecee;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.staff__social-icon {
+  color: lightgrey;
 }
