start to create download

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -82,11 +82,11 @@ a {
 .social-icon {
   width: 8px;
   height: 18px;
-  
 }
 
 @import 'masthead.scss';
 @import 'features.scss';
 @import 'works.scss';
 @import 'team.scss';
-@import 'cliets.scss'
+@import 'cliets.scss';
+@import 'download.scss';
