--- a/#source/scss/download.scss
+++ b/#source/scss/download.scss
@@ -1,23 +1,22 @@
-.download {
-  width: 100%;
-}
 .download__content {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 .download__title {
-  margin-top: 100px;
   color: #2d3033;
   font-size: 28px;
   font-weight: 300;
+  line-height: 21px;
 }
 .download__subtitle {
-  font-weight: 700;
   color: #2d3033;
+  font-weight: 700;
+  margin: 16px auto;
 }
 
 .download__button {
-  
+  width: 280px;
+  margin: 24px auto;
 }
