--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -88,5 +88,6 @@ a {
 @import 'features.scss';
 @import 'works.scss';
 @import 'team.scss';
-@import 'cliets.scss';
+// @import 'cliets.scss';
 @import 'download.scss';
+@import 'footer.scss';
