--- a/#source/css/clients.css
+++ b/#source/css/clients.css
@@ -1,13 +1,8 @@
-.clients {
-}
-.clients__slider {
-}
-.clients__slider-item {
-}
 .testimonial {
   display: flex;
   flex-direction: row;
 }
+
 .clients__picture {
   width: 985px;
   height: 500px;
@@ -15,24 +10,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
+
 .clients__picture-img {
   display: block;
   width: 100%;
   height: 100%;
 }
+
 .testimonial__text {
   max-width: 500px;
-  background-color:#53354a;;
+  background-color: #53354a;
 }
+
 .testimonial__text-text {
-  font-family: 'Cardo';
+  font-family: "Cardo";
   font-size: 36px;
   font-style: italic;
   line-height: 42px;
   color: #ffffff;
 }
+
 .testimonial__text-client-name {
   color: #ffffff;
   font-weight: 700;
