slider is almost finished,but not still beauty

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -88,6 +88,6 @@ a {
 @import 'features.scss';
 @import 'works.scss';
 @import 'team.scss';
-@import 'cliets.scss';
+@import 'clients.scss';
 @import 'download.scss';
 @import 'footer.scss';
