--- a/#source/scss/clients.scss
+++ b/#source/scss/clients.scss
@@ -1,21 +1,14 @@
-.clients {
-}
-.clients__slider {
-}
-.clients__slider-item {
-}
 .testimonial {
+  width: 100%;
   display: flex;
-  flex-direction: row;
 }
 .clients__picture {
-  width: 985px;
+  width: 50%;
   height: 500px;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
 .clients__picture-img {
   display: block;
@@ -23,18 +16,95 @@
   height: 100%;
 }
 .testimonial__text {
-  max-width: 500px;
-  background-color:#53354a;;
+  background-color: #53354a;
+  width: 50%;
+  // display: flex;
 }
 .testimonial__text-text {
+  width: 500px;
   font-family: 'Cardo';
   font-size: 36px;
   font-style: italic;
   line-height: 42px;
   color: #ffffff;
+  margin: 114px 0 30px 85px;
 }
 .testimonial__text-client-name {
   color: #ffffff;
   font-weight: 700;
   text-transform: uppercase;
+  margin-left: 85px;
 }
+.slick-list {
+  overflow: hidden;
+}
+.slick-track {
+  display: flex;
+}
+.clients__slider {
+  position: relative;
+  padding-bottom: 100px;
+}
+.clients__slider .slick-arrow {
+  position: absolute;
+  top: 50%;
+  z-index: 10000000;
+  width: 40px;
+  height: 40px;
+}
+.clients__slider .slick-prev {
+  left: 0px;
+  background: url(/img/Clients/backarrow.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  font-size: 0px;
+}
+.clients__slider .slick-next {
+  right: 0;
+  background: url(/img/Clients/forwardarrow.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  color: transparent;
+}
+.client__slider .button {
+  padding: 0;
+  border: none;
+  font-size: 0px;
+  color: inherit;
+  background-color: transparent;
+  border-width: 0;
+  border-style: none;
+}
+
+.clients__slider .slick-dots {
+  display: flex;
+  position: absolute;
+  bottom:20%;
+  left: calc(50% + 289px);
+
+
+}
+.clients__slider .slick-dots li {
+  list-style: none;
+  margin: 0 8px;
+}
+.clients__slider .slick-dots button {
+  font-size: 0;
+  width: 12px;
+  height: 12px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  border: 1px solid #ffffff;
+  opacity: 0.2;
+  
+}
+.clients__slider .slick-dots .slick-active button{
+  font-size: 0;
+  width: 12px;
+  height: 12px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  border: 1px solid #ffffff;
+  opacity: 1;
+}
+
