--- a/#source/scss/masthead.scss
+++ b/#source/scss/masthead.scss
@@ -5,7 +5,12 @@
   background-size: cover;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
+.header {
+  width: 100%;
+}
+
 .header__container {
   display: flex;
   justify-content: space-between;
@@ -43,7 +48,7 @@
 }
 .navigation__menu-link:hover {
   opacity: 1;
-  transform: skew(1.2);
+  
 }
 
 /* Гамбургер-меню  */
@@ -138,6 +143,7 @@
   align-self: center;
   justify-content: center;
   margin: auto;
+  width: 100%;
 }
 .masthead__title {
   color: #ffffff;
@@ -156,4 +162,17 @@
 .masthead__button {
   max-width: 200px;
   margin: 37px auto;
+}
+.masthead__button:hover{
+  animation: blink 2s 0.5s infinite alternate;
+}
+@keyframes blink {
+  from {
+    background-color: #e84545;
+    color: #ffffff;
+  }
+  to {
+    background-color: #ffffff;
+    color: #e84545;
+  }
 }
