--- a/#source/scss/clients.scss
+++ b/#source/scss/clients.scss
@@ -1,3 +1,6 @@
+.clients {
+  width: 100%;
+}
 .testimonial {
   width: 100%;
   display: flex;
@@ -13,21 +16,21 @@
 .clients__picture-img {
   display: block;
   width: 100%;
-  height: 100%;
 }
 .testimonial__text {
   background-color: #53354a;
   width: 50%;
+  // margin: 0 -15px;
   // display: flex;
 }
 .testimonial__text-text {
-  width: 500px;
+  max-width: 500px;
   font-family: 'Cardo';
   font-size: 36px;
   font-style: italic;
   line-height: 42px;
   color: #ffffff;
-  margin: 114px 0 30px 85px;
+  margin: 114px 0px 30px 85px;
 }
 .testimonial__text-client-name {
   color: #ffffff;
@@ -79,10 +82,8 @@
 .clients__slider .slick-dots {
   display: flex;
   position: absolute;
-  bottom:20%;
-  left: calc(50% + 289px);
-
-
+  bottom: 35%;
+  left: calc(50% + 185px);
 }
 .clients__slider .slick-dots li {
   list-style: none;
@@ -96,9 +97,8 @@
   border-radius: 50%;
   border: 1px solid #ffffff;
   opacity: 0.2;
-  
 }
-.clients__slider .slick-dots .slick-active button{
+.clients__slider .slick-dots .slick-active button {
   font-size: 0;
   width: 12px;
   height: 12px;
@@ -107,4 +107,3 @@
   border: 1px solid #ffffff;
   opacity: 1;
 }
-
