--- a/#source/scss/download.scss
+++ b/#source/scss/download.scss
@@ -1,3 +1,6 @@
+.diwnload {
+  width: 100%;
+}
 .download__content {
   display: flex;
   flex-direction: column;
@@ -19,4 +22,17 @@
 .download__button {
   width: 280px;
   margin: 24px auto;
+}
+.download__button:hover {
+  animation: blink 2s 0.5s infinite alternate;
+}
+@keyframes blink {
+  from {
+    background-color: #e84545;
+    color: #ffffff;
+  }
+  to {
+    background-color: #ffffff;
+    color: #e84545;
+  }
 }
