--- a/#source/scss/team.scss
+++ b/#source/scss/team.scss
@@ -1,9 +1,13 @@
+.team {
+  width: 100%;
+}
 .staff__table {
   display: flex;
-  // flex-direction: row;
+  flex-direction: row;
   margin: 0 -15px;
   padding-top: 100px;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex-wrap: nowrap;
 }
 .staff__card {
   margin: 0 15px;
@@ -11,13 +15,17 @@
 .staff__picture {
   width: 270px;
   height: 270px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .staff__picture-image {
   display: block;
-  margin: 0 auto;
+  width: 100%;
 }
 .staff__information {
   text-align: left;
+  max-width: 265px;
 }
 .staff__name {
   color: #2d3033;
@@ -34,6 +42,8 @@
 
 .staff__social-icons {
   margin-top: 31px;
+  padding-inline-start: 0px;
+  padding-bottom: 101px;
 }
 
 .staff__social-icons-item {
@@ -43,10 +53,28 @@
   background-color: #ffffff;
   display: flex;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
+  margin: 0 4px;
 }
 
 .staff__social-icon {
   color: lightgrey;
 }
-
+.staff__social-icon:hover {
+  transition-property: color;
+  color: grey;
+  transform: scale(1.2);
+}
+.staff__social-icon:visited {
+  transition-property: color;
+  columns: #000000;
+}
+.staff__social-icon .fa-facebook-f {
+  padding: 0 16px;
+}
+.staff__social-icon .fa-twitter {
+  padding: 0 10px;
+}
+.staff__social-icon .fa-linkedin {
+  padding: 0 12px;
+}
