--- a/#source/scss/clients.scss
+++ b/#source/scss/clients.scss
@@ -4,6 +4,7 @@
 .testimonial {
   width: 100%;
   display: flex;
+  
 }
 .clients__picture {
   width: 50%;
@@ -16,12 +17,12 @@
 .clients__picture-img {
   display: block;
   width: 100%;
+  height: 100%;
 }
 .testimonial__text {
   background-color: #53354a;
   width: 50%;
-  // margin: 0 -15px;
-  // display: flex;
+  height:500px;
 }
 .testimonial__text-text {
   max-width: 500px;
