--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,15 @@ a {
   flex-wrap: nowrap;
 }
 
+@media (max-width: 1170px) {
+  .staff__table {
+    display: none;
+  }
+
+  .staff__slider {
+    display: block;
+  }
+}
 .staff__card {
   margin: 0 15px;
 }
@@ -330,6 +339,11 @@ a {
   max-width: 265px;
 }
 
+@media (max-width: 1170px) {
+  .staff__information {
+    text-align: center;
+  }
+}
 .staff__name {
   color: #2d3033;
   padding: 30px 0 16px;
@@ -351,6 +365,11 @@ a {
   padding-bottom: 101px;
 }
 
+@media (max-width: 1170px) {
+  .staff__social-icons {
+    justify-self: center;
+  }
+}
 .staff__social-icons-item {
   width: 40px;
   height: 40px;
@@ -388,6 +407,52 @@ a {
   padding: 0 12px;
 }
 
+.slick-list {
+  overflow: hidden;
+}
+
+.slick-track {
+  display: flex;
+}
+
+.staff__slider {
+  position: relative;
+  padding-top: 100px;
+}
+
+.staff__slider-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.staff__slider .slick-dots li {
+  list-style: none;
+  margin: 0 8px;
+}
+
+.staff__slider .slick-dots {
+  display: flex;
+  position: absolute;
+  top: 95px;
+  left: calc(50% - 50px);
+}
+
+.staff__slider .slick-dots button {
+  font-size: 0px;
+  width: 12px;
+  height: 12px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  border: 1px solid #000000;
+  opacity: 0.5;
+}
+
+.staff__slider .slick-dots button:focus {
+  opacity: 1;
+}
+
 .clients {
   width: 100%;
 }
@@ -409,11 +474,13 @@ a {
 .clients__picture-img {
   display: block;
   width: 100%;
+  height: 100%;
 }
 
 .testimonial__text {
   background-color: #53354a;
   width: 50%;
+  height: 500px;
 }
 
 .testimonial__text-text {
