slider reversed according to media

--- a/#source/scss/clients.scss
+++ b/#source/scss/clients.scss
@@ -4,15 +4,26 @@
 .testimonial {
   width: 100%;
   display: flex;
-  
+}
+@media (max-width: 810px) {
+  .testimonial {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .clients__picture {
-  width: 50%;
-  height: 500px;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 50%;
+}
+@media (max-width: 810px) {
+  .clients__picture {
+    width: 100%;
+  }
 }
 .clients__picture-img {
   display: block;
@@ -20,9 +31,16 @@
   height: 100%;
 }
 .testimonial__text {
+  display: flex;
+  flex-direction: column;
   background-color: #53354a;
   width: 50%;
-  height:500px;
+}
+@media (max-width: 810px) {
+  .testimonial__text {
+    width: 100%;
+    text-align: center;
+  }
 }
 .testimonial__text-text {
   max-width: 500px;
@@ -31,13 +49,41 @@
   font-style: italic;
   line-height: 42px;
   color: #ffffff;
-  margin: 114px 0px 30px 85px;
+  margin: 80px 0px 30px 85px;
+}
+@media (max-width: 1400px) {
+  .testimonial__text-text {
+    font-size: 32px;
+    margin: 40px 0px 10px 20px;
+  }
+}
+@media (max-width: 955px) {
+  .testimonial__text-text {
+    font-size: 26px;
+    margin: 20px 0px 10px 20px;
+  }
+}
+@media (max-width: 810px) {
+  .testimonial__text-text {
+    font-size: 20px;
+    margin: 20px auto;
+  }
 }
 .testimonial__text-client-name {
   color: #ffffff;
   font-weight: 700;
   text-transform: uppercase;
   margin-left: 85px;
+}
+@media (max-width: 1400px) {
+  .testimonial__text-client-name {
+    margin-left: 20px;
+  }
+}
+@media (max-width: 810px) {
+  .testimonial__text-client-name {
+    padding-bottom: 10px;
+  }
 }
 .slick-list {
   overflow: hidden;
@@ -49,43 +95,31 @@
   position: relative;
   padding-bottom: 100px;
 }
-.clients__slider .slick-arrow {
-  position: absolute;
-  top: 50%;
-  z-index: 10000000;
-  width: 40px;
-  height: 40px;
-}
-.clients__slider .slick-prev {
-  left: 0px;
-  background: url(/img/Clients/backarrow.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  font-size: 0px;
-}
-.clients__slider .slick-next {
-  right: 0;
-  background: url(/img/Clients/forwardarrow.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  color: transparent;
-}
-.client__slider .button {
-  padding: 0;
-  border: none;
-  font-size: 0px;
-  color: inherit;
-  background-color: transparent;
-  border-width: 0;
-  border-style: none;
-}
-
 .clients__slider .slick-dots {
   display: flex;
   position: absolute;
   bottom: 35%;
   left: calc(50% + 185px);
 }
+@media (max-width: 1170px) {
+  .clients__slider .slick-dots {
+    bottom: 35%;
+  }
+}
+@media (max-width: 810px) {
+  .clients__slider .slick-dots {
+    position: absolute;
+    left: 40%;
+    top: 1%;
+  }
+  .clients__slider .slick-dots button {
+    background-color: #000000;
+    border-radius: 50%;
+    border: 1px solid #000000;
+    opacity: 0.4;
+  }
+}
+
 .clients__slider .slick-dots li {
   list-style: none;
   margin: 0 8px;
