--- a/#source/scss/works.scss
+++ b/#source/scss/works.scss
@@ -1,14 +1,18 @@
-.works{
+.works {
   width: 100%;
 }
-.projects-static{
+.projects-static {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
 }
-
-.project__picture{
+@media (max-width: 810px) {
+  .projects-static {
+    display: none;
+  }
+}
+.project__picture {
   display: flex;
   flex-direction: column;
   width: 25%;
@@ -16,12 +20,17 @@
   border: 1px solid #ffffff;
   position: relative;
 }
-.project__picture-img{
+@media (max-width: 810px) {
+  .project__picture {
+    width: 100%;
+  }
+}
+.project__picture-img {
   display: block;
   width: 100%;
 }
 
-.project__picture-blackout{
+.project__picture-blackout {
   position: absolute;
   top: 0;
   left: 0;
@@ -33,10 +42,10 @@
   transition: all 1s linear;
 }
 
-.project__picture-blackout:hover{
+.project__picture-blackout:hover {
   opacity: 1;
 }
-.project__picture-info{
+.project__picture-info {
   width: 100%;
   height: 100%;
   display: flex;
@@ -45,16 +54,44 @@
   align-items: center;
   justify-content: center;
 }
-.project__picture-title{
+.project__picture-title {
   color: #ffffff;
   text-transform: uppercase;
-  
 }
-.project__picture-subtitle{
+.project__picture-subtitle {
   color: #ffffff;
 }
 
-
-.project-sliders{
+.project__slider {
   display: none;
+  position: relative;
 }
+@media (max-width: 810px) {
+  .project__slider {
+    display: block;
+  }
+}
+.slick-list {
+  overflow: hidden;
+}
+.slick-track {
+  display: flex;
+}
+.project__slider .slick-dots {
+  display: flex;
+  justify-content: space-around;
+}
+.project__slider .slick-dots li {
+  list-style: none;
+  margin: 0 8px;
+}
+.project__slider .slick-dots button {
+  font-size: 0;
+  width: 12px;
+  height: 12px;
+  background-color: #000000;
+  border-radius: 50%;
+  border: 1px solid #000000;
+  opacity: 0.5;
+}
+
