start to make more adaptive version

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   list-style: none;
   margin: 0;
@@ -107,10 +106,16 @@ a {
   width: 100%;
 }
 
+.header {
+  width: 100%;
+}
+
 .header__container {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid #ffffff30;
+  position: relative;
+  z-index: 2;
 }
 
 .logo {
@@ -122,6 +127,11 @@ a {
   padding: 38px 0;
 }
 
+@media (max-width: 767px) {
+  .navigation {
+    display: none;
+  }
+}
 .navigation__menu {
   margin: 0 -15px;
   display: flex;
@@ -131,10 +141,16 @@ a {
 }
 
 .navigation__menu-item {
+  list-style: none;
   margin: 0 15px;
   padding: 0 15px;
 }
 
+@media (max-width: 868px) {
+  .navigation__menu-item {
+    padding: 0 5px;
+  }
+}
 .navigation__menu-link {
   font-family: "Raleway";
   font-weight: 700;
@@ -151,7 +167,6 @@ a {
   opacity: 1;
 }
 
-/* Гамбургер-меню  */
 .masthead-content {
   align-self: center;
   justify-content: center;
@@ -192,6 +207,31 @@ a {
     color: #e84545;
   }
 }
+.header__list li {
+  list-style: none;
+  margin-left: 20px;
+}
+
+.header__list {
+  display: flex;
+}
+
+.header__list-link {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 13px;
+  font-style: normal;
+  opacity: 0.75;
+  color: #ffffff;
+  text-align: left;
+  text-transform: uppercase;
+  transition: linear 1s;
+}
+
+.header-burger {
+  display: none;
+}
+
 .features {
   width: 100%;
 }
