--- a/#source/scss/masthead.scss
+++ b/#source/scss/masthead.scss
@@ -7,10 +7,15 @@
   flex-direction: column;
   width: 100%;
 }
+.header {
+  width: 100%;
+}
 .header__container {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid #ffffff30;
+  position: relative;
+  z-index: 2;
 }
 .logo {
   justify-content: center;
@@ -18,6 +23,11 @@
 }
 .logo__img {
   padding: 38px 0;
+}
+@media (max-width: 767px) {
+  .navigation {
+    display: none;
+  }
 }
 .navigation__menu {
   margin: 0 -15px;
@@ -28,9 +38,17 @@
 }
 
 .navigation__menu-item {
+  list-style: none;
   margin: 0 15px;
   padding: 0 15px;
 }
+@media (max-width: 868px) {
+  .navigation__menu-item {
+    padding: 0 5px;
+  }
+}
+
+
 .navigation__menu-link {
   font-family: 'Raleway';
   font-weight: 700;
@@ -45,94 +63,6 @@
 .navigation__menu-link:hover {
   opacity: 1;
 }
-
-/* Гамбургер-меню  */
-// .nav-mobile {
-//   width: 100%;
-//   max-width: 320px;
-//   background-color: #000000;
-//   position: relative;
-//   text-align: center;
-//   height: 40px;
-//   font-family: 'Open Sans';
-//   font-weight: 400;
-//   font-style: normal;
-//   font-size: 15px;
-//   color: #ffffff70;
-// }
-// @media (max-width: 841px) {
-//   display: block;
-// }
-// .checkmenu {
-//   opacity: 0;
-// }
-
-// .menu__btn {
-//   display: block;
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   cursor: pointer;
-//   z-index: 1;
-//   line-height: 40px;
-// }
-// .burger-line {
-//   position: absolute;
-//   top: 8px;
-//   right: 8px;
-//   width: 36px;
-//   height: 2px;
-//   background-color: #ffffff;
-//   transition: 0.3s all;
-// }
-// .second-line,
-// .third-line {
-//   top: 18px;
-// }
-// .fourth-line {
-//   top: 28px;
-// }
-// .navmenu__box {
-//   display: block;
-//   position: absolute;
-//   width: 100%;
-//   max-width: 320px;
-//   bottom: 0;
-//   left: 0;
-//   transform: translateY(100%);
-//   max-height: 0;
-//   font-size: 0;
-//   overflow: hidden;
-//   z-index: 3;
-// }
-// .navmenu__item {
-//   display: block;
-//   width: 100%;
-//   padding: 10px;
-//   color: #ffffff;
-//   border-top: 1px solid #ffffff42;
-//   background-color: #000000;
-//   text-decoration: none;
-//   transition: 0.5s all;
-// }
-// #menu__toggle:checked ~ .navmenu_box {
-//   max-height: 400px;
-//   font-size: 16px;
-// }
-// #menu__toggle:checked ~ .first-line {
-//   display: none;
-// }
-// #menu__toggle:checked ~ .second-line {
-//   transform: rotate(45deg);
-// }
-// #menu__toggle:checked ~ .third-line {
-//   transform: rotate(-45deg);
-// }
-// #menu__toggle:checked ~ .fourth-line {
-//   display: none;
-// }
 
 .masthead-content {
   align-self: center;
@@ -170,3 +100,27 @@
     color: #e84545;
   }
 }
+// Burger-menu
+.header__list li {
+  list-style: none;
+  margin-left: 20px;
+}
+.header__list {
+  display: flex;
+}
+
+.header__list-link {
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 13px;
+  font-style: normal;
+  opacity: 0.75;
+  color: #ffffff;
+  text-align: left;
+  text-transform: uppercase;
+  transition: linear 1s;
+}
+.header-burger {
+  display: none;
+}
+
