--- a/#source/scss/footer.scss
+++ b/#source/scss/footer.scss
@@ -12,6 +12,11 @@
   padding: 71px 0 88px 0;
   margin-top: 76px;
 }
+@media (max-width:640px){
+  .about{
+    padding: 30px 0 30px 0;
+  }
+}
 .information-container {
   display: flex;
   justify-content: space-between;
@@ -35,6 +40,11 @@
   color: #ffffff;
   padding-bottom: 22px;
 }
+@media (max-width:640px){
+  .location__title{
+    padding-bottom: 11px;
+  }
+}
 .location__info {
   color: #ffffff50;
   line-height: 22.5px;
@@ -45,7 +55,7 @@
 }
 @media (max-width:640px){
   .social{
-    margin-top: 20px;
+    margin-top: 35px;
   }
 }
 .social__title {
@@ -53,7 +63,11 @@
   color: #ffffff;
   padding-bottom: 21px;
 }
-
+@media (max-width:640px){
+  .social__title{
+    padding-bottom: 11px;
+  }
+}
 .footer__social-icons {
   padding-inline-start: 0px;
 }
@@ -96,13 +110,18 @@
 }
 @media (max-width:640px){
   .about-activebox{
-    margin-top: 20px;
+    margin-top: 35px;
   }
 }
 .about-activebox__title {
   text-transform: uppercase;
   color: #ffffff;
   padding-bottom: 21px;
+}
+@media (max-width:640px){
+  .about-activebox__title{
+    padding-bottom: 11px;
+  }
 }
 .about-activebox__text {
   color: #ffffff50;
