--- a/#source/scss/masthead.scss
+++ b/#source/scss/masthead.scss
@@ -87,6 +87,11 @@
   max-width: 200px;
   margin: 37px auto;
 }
+@media (max-width:410px){
+  .masthead__button {
+    max-width: 90%;
+  }
+}
 .masthead__button:hover {
   animation: blink 2s 0.5s infinite alternate;
 }
@@ -101,26 +106,3 @@
   }
 }
 // Burger-menu
-.header__list li {
-  list-style: none;
-  margin-left: 20px;
-}
-.header__list {
-  display: flex;
-}
-
-.header__list-link {
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 13px;
-  font-style: normal;
-  opacity: 0.75;
-  color: #ffffff;
-  text-align: left;
-  text-transform: uppercase;
-  transition: linear 1s;
-}
-.header-burger {
-  display: none;
-}
-
