--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -29,12 +29,22 @@ h1 {
   font-style: normal;
   line-height: 71px;
 }
+@media (max-width:410px) {
+  h1{
+    font-size: 3rem;
+  }
+}
 h2 {
   font-family: 'Raleway';
   font-weight: 400;
   font-size: 1.375rem;
   font-style: normal;
   line-height: 33px;
+}
+@media (max-width:410px){
+  h2{
+    font-size: 1rem;
+  }
 }
 h3 {
   font-family: 'Raleway';
