adaptive version of masthead without burger

--- a/#source/scss/clients.scss
+++ b/#source/scss/clients.scss
@@ -82,7 +82,7 @@
 }
 @media (max-width: 810px) {
   .testimonial__text-client-name {
-    padding-bottom: 10px;
+    margin-bottom: 40px;
   }
 }
 .slick-list {
@@ -109,17 +109,10 @@
 @media (max-width: 810px) {
   .clients__slider .slick-dots {
     position: absolute;
-    left: 40%;
-    top: 1%;
-  }
-  .clients__slider .slick-dots button {
-    background-color: #000000;
-    border-radius: 50%;
-    border: 1px solid #000000;
-    opacity: 0.4;
+    left: calc(50% - 70px);
+    bottom: calc(100px + 2%)
   }
 }
-
 .clients__slider .slick-dots li {
   list-style: none;
   margin: 0 8px;
@@ -133,6 +126,7 @@
   border: 1px solid #ffffff;
   opacity: 0.2;
 }
+
 .clients__slider .slick-dots .slick-active button {
   font-size: 0;
   width: 12px;
@@ -140,5 +134,5 @@
   background-color: #ffffff;
   border-radius: 50%;
   border: 1px solid #ffffff;
-  opacity: 1;
+  opacity: 0.8;
 }
