--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -53,6 +53,11 @@ h3 {
   font-style: normal;
   line-height: normal;
 }
+@media (max-width:410px){
+  h3{
+    font-size: 0.8125rem;
+  }
+}
 h4 {
   font-family: 'Raleway';
   font-weight: 400;
@@ -66,6 +71,11 @@ p {
   font-style: normal;
   font-size: 0.8745rem;
   line-height: 21px;
+}
+@media (max-width:410px){
+  p{
+    font-size: 0.8125rem;
+  }
 }
 a {
   text-decoration: none;
