--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@
 html {
   font-size: 16px;
   height: 100%;
-  font-family: "Cardo", serif;
-  font-family: "Open Sans", sans-serif;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Cardo', serif;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 main {
@@ -28,7 +28,7 @@ main {
 }
 
 h1 {
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 700;
   font-size: 4rem;
   font-style: normal;
@@ -41,7 +41,7 @@ h1 {
   }
 }
 h2 {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-weight: 400;
   font-size: 1.375rem;
   font-style: normal;
@@ -54,7 +54,7 @@ h2 {
   }
 }
 h3 {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-weight: 700;
   font-size: 0.875rem;
   font-style: normal;
@@ -67,7 +67,7 @@ h3 {
   }
 }
 h4 {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-weight: 400;
   font-size: 0.8125rem;
   font-style: normal;
@@ -75,7 +75,7 @@ h4 {
 }
 
 p {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-weight: 400;
   font-style: normal;
   font-size: 0.8745rem;
@@ -100,7 +100,7 @@ a {
   text-align: center;
   text-transform: uppercase;
   line-height: 21px;
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-weight: 600;
   font-size: 0.8125rem;
   color: #ffffff;
@@ -118,7 +118,7 @@ a {
 
 .masthead {
   min-height: 100vh;
-  background: url("/img/Masthead/MastheadBG.png");
+  background: url('/img/Masthead/MastheadBG.png');
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -186,7 +186,7 @@ a {
   }
 }
 .navigation__menu-link {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-weight: 700;
   font-size: 13px;
   font-style: normal;
@@ -552,16 +552,23 @@ a {
 .clients {
   width: 100%;
 }
+.clients__slider {
+  position: relative;
+  height: 100%;
+  display: flex;
+  align-items: stretch;
+  background-color: #53354a
+}
 
 .testimonial {
   width: 100%;
   display: flex;
+  align-self: stretch;
 }
 
 @media (max-width: 810px) {
   .testimonial {
     width: 100%;
-    display: flex;
     flex-direction: column;
     align-items: center;
   }
@@ -590,6 +597,7 @@ a {
   flex-direction: column;
   background-color: #53354a;
   width: 50%;
+  align-items: stretch;
 }
 
 @media (max-width: 810px) {
@@ -600,7 +608,7 @@ a {
 }
 .testimonial__text-text {
   max-width: 500px;
-  font-family: "Cardo";
+  font-family: 'Cardo';
   font-size: 36px;
   font-style: italic;
   line-height: 42px;
@@ -624,6 +632,7 @@ a {
   .testimonial__text-text {
     font-size: 20px;
     margin: 20px auto;
+    padding-right: 10px;
   }
 }
 .testimonial__text-client-name {
@@ -641,40 +650,38 @@ a {
 @media (max-width: 810px) {
   .testimonial__text-client-name {
     margin-bottom: 40px;
+    font-size: 12px;
   }
 }
-.slick-list {
+.clents__slider .slick-list {
   overflow: hidden;
 }
 
 .slick-track {
   display: flex;
-}
-
-.clients__slider {
-  position: relative;
-  padding-bottom: 100px;
+  align-items: flex-start;
 }
 
 .clients__slider .slick-dots {
   display: flex;
   position: absolute;
-  bottom: 35%;
+  bottom: 15%;
   left: calc(50% + 185px);
 }
 
 @media (max-width: 1170px) {
   .clients__slider .slick-dots {
-    bottom: 35%;
+    bottom: 8%;
   }
 }
 @media (max-width: 810px) {
   .clients__slider .slick-dots {
     position: absolute;
     left: calc(50% - 70px);
-    bottom: calc(100px + 3%);
+    bottom: 1%;
   }
 }
+
 .clients__slider .slick-dots li {
   list-style: none;
   margin: 0 8px;
@@ -700,8 +707,9 @@ a {
   opacity: 0.8;
 }
 
-.diwnload {
+.download {
   width: 100%;
+  margin-top: 100px;
 }
 
 .download__content {
@@ -750,8 +758,8 @@ a {
   }
 }
 @font-face {
-  font-family: "Webdings";
-  src: url("/fonts/webdings.ttf");
+  font-family: 'Webdings';
+  src: url('/fonts/webdings.ttf');
 }
 .footer {
   width: 100%;
@@ -775,8 +783,8 @@ a {
   margin: 0 -15px;
   padding-left: 140px;
 }
-@media (max-width: 810px){
-  .information-container{
+@media (max-width: 810px) {
+  .information-container {
     padding-left: 100px;
   }
 }
@@ -867,7 +875,7 @@ a {
 }
 
 .about-activebox {
-  width: 328px;
+  max-width: 328px;
   text-align: center;
   margin: 0 15px;
 }
@@ -927,13 +935,13 @@ a {
   }
 }
 .copyright__heart {
-  font-family: "Webdings";
+  font-family: 'Webdings';
   color: #e84545;
 }
 
 .copyright__creator-ownpage {
   color: #ffffff;
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
 }
 
