--- a/css/style.css
+++ b/css/style.css
@@ -137,34 +137,41 @@ a {
   position: relative;
   z-index: 2;
 }
-
+.header__burger {
+  display: none;
+}
 @media (max-width: 767px) {
-  .header__container {
+  /* .header__container {
     justify-content: center;
     flex-direction: column;
-  }
+  } */
 }
 .logo {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 5;
 }
 
 .logo__img {
   padding: 38px 0;
 }
 
-@media (max-width: 514px) {
+/* @media (max-width: 514px) {
   .navigation {
     display: none;
   }
-}
+} */
 .navigation__menu {
   margin: 0 -15px;
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 45px 0;
+}
+.burger__menu {
+  display: none;
 }
 
 @media (max-width: 767px) {
@@ -200,7 +207,94 @@ a {
 .navigation__menu-link:hover {
   opacity: 1;
 }
+/* BurgerMenu */
+.header__burger {
+  display: none;
+}
 
+@media (max-width: 767px) {
+  body.lock {
+    overflow: hidden;
+  }
+  .navigation__menu {
+    display: none;
+  }
+  .burger__menu {
+    display: block;
+  }
+  .header__burger {
+    display: block;
+    position: relative;
+    z-index: 3;
+    width: 30px;
+    height: 20px;
+    top: 40px;
+  }
+  .header__container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header__burger::before,
+  .header__burger::after {
+    content: '';
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    transition: all 0.3s ease 0s;
+  }
+  .header__burger::before {
+    top: 0;
+  }
+  .header__burger::after {
+    bottom: 0;
+  }
+  .header__burger span {
+    position: absolute;
+    background-color: #fff;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    left: 0;
+    transition: all 0.3s ease 0s;
+  }
+  .header__burger.active::before {
+    transform: rotate(45deg);
+    top: 9px;
+  }
+  .header__burger.active::after {
+    transform: rotate(-45deg);
+    bottom: 9px;
+  }
+  .header__burger.active span {
+    transform: scale(0);
+  }
+  .burger__menu {
+    position: fixed;
+    top: -100%;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background: url('/img/Masthead/MastheadBG.png');
+    z-index: 2;
+    padding: 100px 10px 20px 10px;
+    transition: all 0.3 linear;
+  }
+  .burger__menu.active {
+    top: 0;
+    
+  }
+  .navigation__menu-item {
+    margin: 20px auto;
+  }
+  .navigation__menu-item:first-child{
+    padding-top: 20px;
+    border-top: 1px solid #ffffff30;
+    margin-top: 0px;
+  }
+}
 .masthead-content {
   align-self: center;
   justify-content: center;
@@ -557,7 +651,7 @@ a {
   height: 100%;
   display: flex;
   align-items: stretch;
-  background-color: #53354a
+  background-color: #53354a;
 }
 
 .testimonial {
